fix: ensure text alignment is centered in screen-heading style

--- a/client/src/utilities/ScreenHeading/ScreenHeading.css
+++ b/client/src/utilities/ScreenHeading/ScreenHeading.css
@@ -10,6 +10,7 @@
     font-size: 32px;
     color: rgba(160, 160, 160, 0.643)    ;
     font-family: "Poppins Bold";
+    text-align: center;
 }
 
 .screen-sub-heading {
